<?xml version="1.0"?>
<package format="2">

    <name>zeabus_model</name>
    <version>0.0.0</version>
    <description>This package purpose use to help about show ability</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
